blog comment function part 1

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,5 @@
-
 spring:
   profiles:
     active: dev
 
-mybatis:
-  config-location: classpath:mybatis/mybatis-config.xml
-  mapper-locations: classpath:mybatis/mapper/*.xml
+comment.avatar: /images/avatar.png
